add update ticket functionality
